--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+.app {
+  font-size: 1.6rem;
+  display: grid;
+  grid-template-rows: 8vh 86vh 6vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* 1800px */
+
+@media only screen and (min-width: 112.5rem) {
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* 1200px */
+
+@media only screen and (max-width: 75rem) {
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* 900px */
+
+@media only screen and (max-width: 56.25rem) {
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* 600px */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@media only screen and (max-width: 37.5rem) {
+  
+} 
