--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root {
+  height: 100%;
+}
+
+/* 1800px */
+
+@media only screen and (min-width: 75.000001rem) {
+  html {
+    font-size: 75%  ;
+  }
+}
+
+/* 1200px */
+
+@media only screen and (max-width: 75rem) {
+  html {
+    font-size: 62.5%;
+  }
+}
+
+/* 900px */
+
+@media only screen and (max-width: 56.25rem) {
+  html {
+    font-size: 56.25%;
+  }
+}
+
+/* 600px */
+
+@media only screen and (max-width: 37.5rem) {
+  html {
+    font-size: 50%;
+  }
+} 
+
+body {
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777;
 }
